# sinner

./: .gitmodules  Cargo.toml  README.md
crates/sin/: Cargo.toml
crates/sin/src/: lib.rs
crates/sin_migrate/: Cargo.toml
crates/sin_migrate/src/: cli.rs  conn.rs  consts.rs  error.rs  main.rs  utils.rs
crates/sin_migrate/src/migrations/: generate.rs  mod.rs
crates/sin_migrate/src/migrations/redo/: mod.rs  redo_impl.rs
crates/sin_migrate/src/migrations/run/: mod.rs  run_impl.rs
crates/sin_migrate/src/migrations/undo/: mod.rs  undo_impl.rs
crates/sin_migrate/src/setup/: mod.rs  schema.rs
crates/sin_migrate/src/setup/stmts/: down.cql  up.cql
crates/traits/: Cargo.toml
crates/traits/src/: clients.rs  cql.rs  expressions.rs  lib.rs
crates/traits/src/clients/: astra_client.rs  scylla_cql.rs
crates/traits/src/clients/astra_client/: astra_client.rs
crates/traits/src/clients/scylla_cql/: scylla_client.rs
crates/traits/src/data_types/: types.rs
crates/traits/src/nosql/: interface.rs
crates/traits/src/query/: client.rs  mod.rs  query.rs
crates/traits/src/query_builder/: conds.rs  mod.rs  query.rs  select.rs
crates/try_sin/: Cargo.toml
crates/try_sin/src/: main.rs
migrations/1732192067757208000_third_table/: down.cql  up.cql
sin/: Cargo.toml
sin/src/: lib.rs
sin_migrate/: Cargo.toml
sin_migrate/src/: conn.rs  consts.rs  main.rs
sin_migrate/src/migrations/: generate.rs  mod.rs  run.rs
traits/: Cargo.toml
traits/src/: clients.rs  lib.rs
traits/src/clients/: astra_client.rs
traits/src/clients/scylla_cql/: scylla_client.rs
traits/src/data_types/: types.rs
traits/src/nosql/: interface.rs
traits/src/query/: client.rs  query.rs
try_sin/: Cargo.toml
try_sin/src/: main.rs
