[package]
name = "sin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.79", features = ["full", "extra-traits"]}
proc-macro2 = "1"
quote = "1"
serde = {version = "*", features = ["derive"]}

[lints]
workspace = true
