[package]
name = "sin_migrate"
version = "0.1.0"
edition = "2021"

[dependencies]
sin = {path = "../sin"}
traits = {path  = "../traits"}
clap = { version = "4.5", features = ["derive"] }
time = { version = "0.3"}
scylla = { version = "0.15" , features = ["time-03"]}
futures = "0.3.31"
tokio = {version  = "1.41.1", features = ["rt-multi-thread"] }
colored = "2.1.0"
thiserror = "2.0.3"
